# confluence-wiki-mcp

./: .env.example  .gitignore  CODEX_CONFIG.example.toml  DEVELOPMENT.md  INSTALL.md  QUICKSTART.md  README.md  USAGE.md  install.bat  pyproject.toml  requirements.txt  run_server.py  server.py  start_server.bat  start_server.sh  test_client.py  test_package.py  wiki_client.py
confluence_wiki_mcp/: __init__.py  server.py
